2006-01-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/checks/video.py:
	* flumotion/worker/checks/video010.py:
	* flumotion/worker/checks/video08.py:
	  move CheckProcError

2006-01-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/step.py:
	  a RemoteRunError already has a sensible failure.value to show,
	  so special-case it
	* flumotion/wizard/steps.py:
	  catch and block on RemoteRunFailure for overlay
	* flumotion/worker/checks/video08.py:
	  add a special gst-python 0.8 hack to work around refcounting bugs
	* flumotion/worker/worker.py:
	  give us a decent usable RemoteRunError if there was an exception
	  while running the remote procedure

2006-01-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/checks/check.py:
	  add an OPEN_READ message
	* flumotion/worker/checks/video.py:
	* flumotion/worker/checks/video010.py:
	* flumotion/worker/checks/video08.py:
	  move all but the 1394 check into the video.py class
	* po/ca.po:
	* po/nl.po:
	* po/no.po:
	  update for translations

2006-01-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_soundcard.glade:
	  add a handler for combobox_channels changed
	* flumotion/admin/admin.py:
	  update docstring, workerRun now returns a Result
	* flumotion/admin/gtk/message.py:
	  document
	  make the textview wrap on words
	  add a translator so we can translate Messages
	  sort the messages viewed first by level, then priority

	* flumotion/wizard/step.py:
	  remove the info_msg/error_msg calls
	  show all messages that are part of the Result of workerRun
	  raise a RemoteRunFailure if the call produced a failed result
	  raise a RemoteRunError if the call failed and didn't produce
	  a result
	  forward on the value of a succesful Result to the caller
	* flumotion/wizard/steps.py:
	  use the new Message for all messages to be shown
	  add a on_combobox_channels_changed, but needs more integrating